Some feedback fixes

--- a/readthedocsext/theme/templates/projects/import_form.html
+++ b/readthedocsext/theme/templates/projects/import_form.html
@@ -64,7 +64,7 @@
           <a class="ui basic button" href="https://docs.readthedocs.io/page/intro/import-guide.html" target="_blank">
             {% trans "Learn more" %}
           </a>
-          <a class="ui button" href="{% url 'projects_import_manual' %}">
+          <a class="ui primary button" href="{% url 'projects_import_manual' %}">
             {% trans "Continue" %}
           </a>
         </div>
