--- a/readthedocsext/theme/templates/organizations/settings/sso_edit.html
+++ b/readthedocsext/theme/templates/organizations/settings/sso_edit.html
@@ -1,10 +1,11 @@
 {% extends "organizations/settings/base.html" %}
 
 {% load i18n %}
-{% load organizations %}
-{% load corporate %}
 {% load crispy_forms_tags %}
 
+{% load corporate %}
+{% load ext_theme_tags %}
+{% load organizations %}
 
 {% block title %}{{ organization.name }} - {% trans "Authorization" %}{% endblock %}
 
@@ -41,104 +42,85 @@
     </div>
   {% endif %}
 
-  <form class="ui form" method="POST" action=".">
-    {% csrf_token %}
+  <div data-bind="using: new OrganizationSettingsAuthorizationView()">
+    <form class="ui form" method="POST" action="." data-bind="css: { warning: show_warning }">
+      {% csrf_token %}
 
-    {% comment %}
-      Django built in forms don't provide enough flexibility to make this UI nice,
-      so we build the entire form outside the backend forms and models instead.
+      <div class="ui top attached segment">
+        <div class="ui relaxed list">
 
-      {# form | crispy #}
-    {% endcomment %}
+          <div class="item">
+            <i class="fad fa-user-group medium middle aligned icon"></i>
+            <div class="content">
+              <div class="header">
+                {{ form.PROVIDER_DEFAULT }}
+                <span class="ui horizontal label">
+                  {% trans "Default" %}
+                </span>
 
+              </div>
+              <div class="description">
+                {% blocktrans trimmed %}
+                  Use built-in organization teams to manage access to your projects and documentation.
+                {% endblocktrans %}
+              </div>
+            </div>
+          </div>
 
-    <div class="grouped fields">
+          <div class="item">
+            <i class="fab fa-github medium middle aligned icon"></i>
+            <div class="content">
+              <div class="header">{{ form.PROVIDER_ALLAUTH }}</div>
+              <div class="description">
+                {% blocktrans trimmed %}
+                  Control all access to your projects by reusing permissions from your repository's version control provider.
+                  This replaces Read the Docs managed teams.
+                {% endblocktrans %}
+              </div>
+            </div>
+          </div>
 
-      {# TODO Reused the existing title for now, but is "authorization" the most correct here? #}
-      <label for="provider">
-        {% trans "Organization authorization provider:" %}
-      </label>
-      <div class="field">
-        <div class="ui radio checkbox checked" data-bind="semanticui: {checkbox: {}}">
-          <label>
-            <strong>{% trans "Read the Docs teams" %}</strong>
-            <p>
-              {% blocktrans trimmed %}
-                Use built-in organization teams to manage access to your projects and documentation.
-              {% endblocktrans %}
-            </p>
-          </label>
-          <input type="radio" name="provider" tabindex="0" class="hidden" value checked />
+          <div class="item">
+            <i class="fab fa-google middle aligned icon"></i>
+            <div class="content">
+              <div class="header">
+                {{ form.PROVIDER_EMAIL }}
+                <a class="ui secondary horizontal label" href="{% url 'subscription_detail' organization.slug %}">
+                  Pro plan
+                </a>
+              </div>
+              <div class="description">
+                {% blocktrans trimmed %}
+                  Users with a verified Google Workspace email account matching your domain will auto-join your organization.
+                  All users in your organization are required to have a connected Google account.
+                  Project permissions and authorization are managed using Read the Docs teams.
+                {% endblocktrans %}
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
-      <div class="field">
-        <div class="ui radio checkbox" data-bind="semanticui: {checkbox: {}}">
-          <label>
-            <strong>{% trans "GitHub, GitLab, or Bitbucket" %}</strong>
-            <p>
-              {% blocktrans trimmed %}
-                Control all access to your projects by reusing permissions from your project's version control provider.
-                This replaces Read the Docs managed teams.
-              {% endblocktrans %}
-            </p>
-          </label>
-          <input type="radio" name="provider" tabindex="0" class="hidden" value="allauth" />
+      <div class="ui basic fieldset segment">
+        {% alter_field form.provider data_bind="valueInit: provider, value: provider" %}
+        {{ form.provider | as_crispy_field }}
+
+        <div class="ko hidden" data-bind="css: { hidden: !use_domain() }">
+          {{ form.domain | as_crispy_field }}
+        </div>
+
+        <div class="ui warning message ko hidden" data-bind="css: { hidden: !show_warning() }">
+          <i class="fad fa-circle-exclamation icon"></i>
+          {% blocktrans trimmed %}
+            When switching authentication providers, user permissions granted
+            through your current provider may be discarded. Ensure your new
+            authentication provider is configured correctly before making this change.
+          {% endblocktrans %}
         </div>
       </div>
 
-      <div class="field">
-        <div class="ui radio disabled checkbox" data-bind="semanticui: {checkbox: {}}">
-          <label>
-            <strong>Google</strong>
-            {% if not has_google_sso_feature %}
-              <span class="ui small secondary label">
-                Pro plan
-              </span>
-            {% endif %}
-            <p>
-              {% blocktrans trimmed %}
-                Include all users from your Google Domains organization in a specific team,
-                allowing them access to a subset of your projects.
-              {% endblocktrans %}
-            </p>
-          </label>
-          <input type="radio" name="provider" tabindex="0" class="hidden" value="email" />
-        </div>
-        {% if not has_google_sso_feature %}
-          {# Because the field above is disabled, the label above isn't linkable. This is a redundant element for now #}
-          <a class="ui small basic secondary pointing up label" href="{% url 'subscription_detail' organization.slug %}">
-            {% trans "Upgrade your plan" %}
-          </a>
-        {% endif %}
-      </div>
-
-    </div>
-
-    {# TODO expose domain field and move jQuery logic to a knockout view #}
-    {% comment %}
-    {% block extra_scripts %}
-    <script type="text/javascript">
-     $(document).ready(function() {
-         var value = $('#id_provider').val();
-         if (value !== 'email') {
-             $('#id_domain').parent().hide();
-         }
-
-         $('#id_provider').bind('change', function (ev) {
-             if (this.value === 'email') {
-                 $('#id_domain').parent().show();
-                 $('#id_domain').attr('required', true);
-             } else {
-                 $('#id_domain').parent().hide();
-                 $('#id_domain').attr('required', false);
-             }
-         })
-     })
-    </script>
-    {% endblock %}
-    {% endcomment %}
-
-    <input class="ui primary button" type="submit" name="submit" value="{% trans "Save" %}" />
-  </form>
+      <input class="ui primary button" type="submit" name="submit" value="{% trans "Save" %}" />
+    </form>
+  </div>
 {% endblock organization_edit_content %}
