--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -52,7 +52,9 @@
 
         {# Temporal notification while we are in Beta #}
         <div class="ui message info">
-            This dashboard is currently in Beta. Please report any feedback you may have.
+            This dashboard is currently in beta,
+            you can <a href="https://{{ PRODUCTION_DOMAIN }}">return to the legacy dashboard</a> if you encounter any problems.
+            Feel free to <a href="https://{{ PRODUCTION_DOMAIN }}/support">report any feedback</a> you may have.
         </div>
 
         {% block messages %}
