--- a/readthedocsext/theme/templates/projects/translation_list.html
+++ b/readthedocsext/theme/templates/projects/translation_list.html
@@ -10,7 +10,7 @@
 
 {% block project_edit_content %}
   {% if not project.supports_translations %}
-    {% url 'projects_advanced' project_slug=project.slug as advanced_settings_url %}
+    {% url 'projects_edit' project_slug=project.slug as project_settings_url %}
     <div class="ui icon message">
       <i class="fa-duotone fa-circle-exclamation icon"></i>
       <div class="content">
@@ -18,8 +18,8 @@
           {% trans "Translations are not supported" %}
         </div>
       <p>
-      {% blocktrans trimmed with advanced_settings_url=advanced_settings_url %}
-      This project is <a href="{{ advanced_settings_url }}">configured</a> with a versioning scheme that doesn't support translations.
+      {% blocktrans trimmed with project_settings_url=project_settings_url %}
+      This project is <a href="{{ project_settings_url }}">configured</a> with a versioning scheme that doesn't support translations.
       {% endblocktrans %}
       </p>
     </div>
