--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -68,6 +68,6 @@
     {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/pull-requests.html" text="How to configure pull request builds" is_external=True class="item" %}
     {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/automation-rules.html" text="How to manage versions automatically" is_external=True class="item" %}
     {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/setup/monorepo.html" text="How to use a .readthedocs.yaml file in a sub-folder" is_external=True class="item" %}
-    {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/single-version.html" text="URL versioning schemes" is_external=True class="item" %}
+    {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/versioning-schemes.html" text="URL versioning schemes" is_external=True class="item" %}
   </div>
 {% endblock project_edit_sidebar_help_topics_content %}
