Update org/project headers and make them always collapsed by default
- These headers are now collapsed by default
- The expansion button is more obvious in the header now
- Adds project/org icons in the header
- Tune some of the content that didn't quite make sense in the headers
- Remove all of the subtemplate `is_collapsed` configuration

Updates from:

- Fixes #229
- Fixes #289

--- a/readthedocsext/theme/templates/builds/build_list.html
+++ b/readthedocsext/theme/templates/builds/build_list.html
@@ -7,7 +7,7 @@
 {% block title %}{% trans "Builds" %}{% endblock %}
 
 {% block content-header %}
-  {% include "projects/partials/header.html" with builds_active="active" is_collapsed=True %}
+  {% include "projects/partials/header.html" with builds_active="active" %}
 {% endblock %}
 
 {% block content %}
