--- a/readthedocsext/theme/templates/organizations/settings/base.html
+++ b/readthedocsext/theme/templates/organizations/settings/base.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content-header %}
-  {% include "organizations/partials/header.html" with edit_active="active" is_collapsed=True %}
+  {% include "organizations/partials/header.html" with edit_active="active" %}
 {% endblock %}
 
 {% block content %}
