--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -7,15 +7,8 @@
 {% comment %}
 
 This template is the header at the top of project dashboard pages. There are
-two modes to this header, full and collapsed. Full is the default view on the
-project detail page, while the collapsed view is the default for the other
-project dashboard pages. It is possible to expand the menu with a dropdown.
-
-Arguments:
-
-is_collapsed (default: True)
-    The default view configuration, normally start this view off in a collapsed
-    state, except on the main detail page.
+two modes to this header, full and collapsed. The header always starts off as
+collapsed, to save visual space and can be expanded with the right label.
 
 {% endcomment %}
 
@@ -28,32 +21,31 @@ is_collapsed (default: True)
     </div>
   {% endfor %}
 
-  <div class="ui top attached segment" data-bind="using: CollapsingHeaderView({{ is_collapsed|default_if_none:True|yesno:"true,false" }})">
+  <div class="ui top attached segment" data-bind="using: CollapsingHeaderView(true)">
 
     {% block project_header_metadata %}
       <div class="ui stacking grid">
 
         {% block project_header_title %}
-          <div class="eight wide computer eight wide tablet sixteen wide mobile column">
-            <div class="ui medium monospace header">
-              <a href="{{ project.get_absolute_url }}">
-                {{ project.name | default:project.slug }}
-              </a>
-
-              {# The dropdown action button, to swap between expanded/collapsed #}
-              <span data-bind="click: toggle_collapsed">
-                <i class="fas grey small icon" data-bind="class: dropdown_class"></i>
-              </span>
-            </div>
+          <div class="eight wide computer eight wide tablet sixteen wide mobile middle aligned column">
+            {% include "projects/includes/project_image.html" with project=project classes="micro rounded right spaced inline" %}
+            <a class="ui medium text" href="{{ project.get_absolute_url }}">
+              {{ project.name | default:project.slug }}
+            </a>
           </div>
         {% endblock project_header_title %}
 
         {% block project_header_labels %}
-          <div class="right aligned eight wide computer eight wide tablet sixteen wide left aligned mobile column">
+          <div class="right aligned eight wide computer eight wide tablet sixteen wide left aligned mobile middle aligned column">
             {% include "includes/components/config_label.html" with icon="fa-solid fa-language" text=project.language|upper popup=project.language|language_name_local %}
             {% for organization in project.organizations.all %}
               {% include "includes/components/config_label.html" with icon="fa-solid fa-building" text=organization.name url=organization.get_absolute_url %}
             {% endfor %}
+
+            {# The dropdown action button, to swap between expanded/collapsed #}
+            <a class="ui icon primary label" data-bind="click: toggle_collapsed" data-content="{% trans "More project information" %}">
+              <i class="fas fa-caret-down icon" data-bind="class: dropdown_class"></i>
+            </a>
           </div>
         {% endblock project_header_labels %}
 
@@ -69,13 +61,6 @@ is_collapsed (default: True)
             {% endblock %}
 
             {% block project_header_tags %}
-              {% for organization in project.organizations.all %}
-                <a class="ui label" href="{{ organization.get_absolute_url }}">
-                  <i class="fad fa-building icon"></i>
-                  {{ organization.name }}
-                </a>
-              {% endfor %}
-
               {# Manual tags #}
               {% for tag in project.tags.all %}
                 <a class="ui teal basic label" href="{% url "projects_tag_detail" tag.slug %}">{{ tag.name }}</a>
