--- a/readthedocsext/theme/templates/projects/project_detail.html
+++ b/readthedocsext/theme/templates/projects/project_detail.html
@@ -7,7 +7,7 @@
 {% block title %}{{ project.name }}{% endblock %}
 
 {% block content-header %}
-  {% include "projects/partials/header.html" with overview_active="active" is_collapsed=False %}
+  {% include "projects/partials/header.html" with overview_active="active" %}
 {% endblock %}
 
 {% block content %}
