--- a/readthedocsext/theme/templates/organizations/member_list.html
+++ b/readthedocsext/theme/templates/organizations/member_list.html
@@ -8,7 +8,7 @@
 {% block title %}{{ organization.name }} - {% trans "Members" %}{% endblock %}
 
 {% block content-header %}
-  {% include "organizations/partials/header.html" with organization=organization members_active="active" is_collapsed=False %}
+  {% include "organizations/partials/header.html" with organization=organization members_active="active" %}
 {% endblock %}
 
 {% block content %}
