--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -49,9 +49,11 @@
 
     {% block content-wrapper %}
       <div class="ui very padded container">
-        {% block messages %}
-          {% include "includes/utils/messages.html" %}
-        {% endblock messages %}
+        {% block notifications %}
+          {% block messages %}
+            {% include "includes/utils/messages.html" %}
+          {% endblock messages %}
+        {% endblock notifications %}
 
         {# TODO move admin-bar usage to content-header #}
         {% block admin-bar %}{% endblock %}
