--- a/readthedocsext/theme/templates/profiles/base_edit.html
+++ b/readthedocsext/theme/templates/profiles/base_edit.html
@@ -3,6 +3,16 @@
 {% load i18n %}
 {% load core_tags %}
 
+{% block notifications %}
+  {# User notifications only #}
+  <rtd-notification-list
+    url="{% url "users-notifications-list" request.user.username %}"
+    csrf-token="{{ csrf_token }}">
+  </rtd-notification-list>
+
+  {{ block.super }}
+{% endblock notifications %}
+
 {% block content %}
   <div class="ui stackable grid">
     <div class="five wide computer five wide tablet sixteen wide mobile column">
