--- a/readthedocsext/theme/templates/projects/base.html
+++ b/readthedocsext/theme/templates/projects/base.html
@@ -3,3 +3,16 @@
 {% block header %}
   {% include "includes/header.html" with active_item="projects" %}
 {% endblock %}
+
+{% block notifications %}
+  {# Project specific notifications only #}
+  {% if project %}
+    <rtd-notification-list
+      url="{% url "projects-notifications-list" project.slug %}"
+      csrf-token="{{ csrf_token }}">
+    </rtd-notification-list>
+  {% endif %}
+
+  {{ block.super }}
+{% endblock notifications %}
+
