--- a/readthedocsext/theme/templates/support/index.html
+++ b/readthedocsext/theme/templates/support/index.html
@@ -4,55 +4,66 @@
 {% load crispy_forms_tags %}
 
 
-{% block title %}Support{% endblock %}
+{% block title %}{% trans "Support request" %}{% endblock %}
 
 {% block content %}
-  <div id="support_page">
+  <h1 class="ui large heading">{% trans "Support request" %}</h1>
 
-    <h2 id="usage-questions">Usage Questions</h2>
+  {% block support_form %}
+    {# TODO this is a check for our commercial hosting, we should do something different here #}
+    {% if USE_ORGANIZATIONS %}
+      <p>
+        We're here to help make sure you get the most out of Read the Docs.
+        Feel free to ask us any questions you have about getting set up,
+        or let us know if there is an issue with the service.
+      </p>
+      <p>
+        You can always check out <a href="http://docs.readthedocs.org/en/latest/business/index.html" target="_blank">our documentation</a> as well.
+        It contains a number of answers to common questions and helps you understand the features on our site a bit more.
+      </p>
+    {% else %} 
+      <h2 id="usage-questions">Usage questions</h2>
 
-    <p>
-      If you have questions about how to use Read the Docs, or have an issue that isn't related to a bug, <a href="http://stackoverflow.com/questions/tagged/read-the-docs">Stack Overflow</a> is the best place to ask. Tag questions with <span class="pre">read-the-docs</span> so other folks can find them easily.
-    </p>
+      <p>
+        If you have questions about how to use Read the Docs, or have an issue that isn't related to a bug, <a href="http://stackoverflow.com/questions/tagged/read-the-docs" target="_blank">Stack Overflow</a> is the best place to ask. Tag questions with <span class="pre">read-the-docs</span> so other folks can find them easily.
+      </p>
 
-    <p>
-      You might also find the answers you are looking for in our <a href="https://docs.readthedocs.io/page/guides/">documentation guides</a>.
-      These provide step-by-step solutions to common user requirements.
-    </p>
+      <p>
+        You might also find the answers you are looking for in our <a href="https://docs.readthedocs.io/page/guides/" target="_blank">documentation guides</a>.
+        These provide step-by-step solutions to common user requirements.
+      </p>
 
-    <h2 id="bug-reports">Bug Reports</h2>
+      <h2 id="bug-reports">Bug reports</h2>
 
-    <p>
-      If you have an issue with the actual functioning of the site,
-      you can file bug reports on our <a href="https://github.com/readthedocs/readthedocs.org/issues">GitHub issue tracker</a>.
-      You can also <a href="http://docs.readthedocs.io/page/contribute.html">contribute</a> to Read the Docs,
-      as the code is open source.
-    </p>
+      <p>
+        If you have an issue with the actual functioning of the site,
+        you can file bug reports on our <a href="https://github.com/readthedocs/readthedocs.org/issues">GitHub issue tracker</a>.
+        You can also <a href="http://docs.readthedocs.io/page/contribute.html">contribute</a> to Read the Docs,
+        as the code is open source.
+      </p>
 
-    <h2 id="commercial-support">Commercial Support</h2>
+      <h2 id="commercial-support">Commercial support</h2>
 
-    <p>
-      We offer commercial support for Read the Docs
-      and commercial hosting with <a href="https://readthedocs.com">Read the Docs for Business</a>.
-      We have a dedicated team that responds to support requests during business hours.
-    </p>
+      <p>
+        We offer commercial support for Read the Docs
+        and commercial hosting with <a href="https://readthedocs.com">Read the Docs for Business</a>.
+        We have a dedicated team that responds to support requests during business hours.
+      </p>
 
-    <h2 id="user-support">User Support</h2>
+      <h2 id="user-support">User support</h2>
 
-    <p>
-      If you need a specific request for your project or account,
-      like more resources, change of the project's slug or username.
-    </p>
+      <p>
+        If you need a specific request for your project or account,
+        like more resources, change of the project's slug or username.
+      </p>
+    {% endif %}
 
     {% if not SUPPORT_FORM_ENDPOINT %}
-
       <p>
         Please send an email to <a href="mailto:{{SUPPORT_EMAIL }}">{{ SUPPORT_EMAIL }}</a>
         and we will get back to you as soon as possible.
       </p>
-
     {% else %}
-
       <p>
         Fill out the form below,
         and we will get back to you as soon as possible.
@@ -64,13 +75,12 @@
         name="support-request"
         action="{{ SUPPORT_FORM_ENDPOINT }}"
         enctype="multipart/form-data"
-        accept-charset="utf-8"
-      >
+        accept-charset="utf-8">
+
         {{ form|crispy }}
 
-        <input class="ui primary button" type="submit" value="Submit support request">
+        <input class="ui primary button" type="submit" value="Submit support request" />
       </form>
     {% endif %}
-  </div>
-
+  {% endblock support_form %}
 {% endblock %}
