--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -6,6 +6,7 @@
 {% for provider in socialaccount_providers %}
   {# OpenID is not implemented #}
   {% if provider.id != 'bitbucket' %}
+  {% if allowed_providers and provider.id in allowed_providers or not allowed_providers %}
     <li class="item">
       <form class="ui form"
             method="post"
@@ -19,5 +20,6 @@
         </button>
       </form>
     </li>
+  {% endif %}
   {% endif %}
 {% endfor %}
