--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -18,7 +18,8 @@
     <script type="application/json" id="site-config">
       {
         "debug": {% debug_enabled as is_debug_enabled %}{{ is_debug_enabled | yesno:"true,false" }},
-        "webpack_public_path": "{% get_webpack_static_prefix %}/readthedocsext/theme/"
+        "webpack_public_path": "{% get_webpack_static_prefix %}/readthedocsext/theme/",
+        "production_domain": "{{ PRODUCTION_DOMAIN }}"
       }
     </script>
 
