Add API notification support to new dashboard (#300)
* Proof of concept Lit notification element

* More experimenting with API notifications in other spots in the UI

* WIP, includes web component for notification

* Add notification message styles and overrides, mostly working implementation

This shows top level and build detail notifications with only some small
bugs remaining.

* Clean up rough edges on build view, JS, and templates

- Adds build error handling in templates
- Fixes polling bugs with build and notification API

* Relint files

* Add missing file

* Fix notification over polling

* Change API notification query to state__in

* Fix up docs

* Drop extra messages block, it is unused.

* Add missing web components API doc file

---------

Co-authored-by: Manuel Kaufmann <humitos@gmail.com>

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -50,9 +50,9 @@
 
     {% block content-wrapper %}
       <div class="ui very padded container">
-        {% block messages %}
+        {% block notifications %}
           {% include "includes/utils/messages.html" %}
-        {% endblock messages %}
+        {% endblock notifications %}
 
         {# TODO move admin-bar usage to content-header #}
         {% block admin-bar %}{% endblock %}
