--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -4,8 +4,12 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
-  {# OpenID is not implemented #}
-  {% if provider.id != 'bitbucket' %}
+  {#
+    - OpenID is not implemented.
+    - Bitbucket is deprecated (in favor of their new oauth implementation).
+    - SAML is handled in another view, we don't want to list all SAML integrations here.
+  #}
+  {% if provider.id != 'bitbucket' and provider.id != 'saml' %}
     {% if allowed_providers and provider.id in allowed_providers or not allowed_providers %}
       <li class="item">
         <form class="ui form"
