Fix a number of display issues with login view
- Fixes #312

--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -9,9 +9,7 @@
 {% block content %}
   <div class="ui stackable padded grid">
 
-    <div class="violet four wide computer only column"></div>
-
-    <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
+    <div class="sixteen wide computer sixteen wide tablet sixteen wide mobile column">
       {% get_providers as socialaccount_providers %}
 
       <div class="ui medium header">
@@ -25,32 +23,29 @@
       </div>
 
       <div
-          {# The password URL is listed as an additional tab if present #}
-        class="ui small stackable secondary item menu {% if project_password_url %}three{% else %}two{% endif %}"
+        class="ui small stackable teal secondary menu"
         data-bind="semanticui: {tabs: {history: true, autoTabActivation: false}}">
 
-        {# This is purposely minimal, as the verbiage for "Log in with connected account" is a mountful #}
+        <div class="header item">
+          {% trans "Log in using:" %}
+        </div>
+
         <a class="item" data-tab="vcs">
-          <i class="fad fa-cloud icon"></i>
+          <i class="fas fa-cloud icon"></i>
           {% block authentication_vcs_text %}{% trans "Connected account" %}{% endblock %}
         </a>
 
-        {# If allowed providers is given, disable the username/password form #}
-        {% blocktrans asvar text_email_disabled %}Log in using email is disabled for this organization{% endblocktrans %}
-        <a class="item {% if allowed_providers %}disabled{% endif %}"
-           data-tab="email"
-           {% if allowed_providers %}
-             data-content="{{ text_email_disabled }}"
-             aria-label="{{ text_email_disabled }}"
-           {% endif %}>
-          <i class="fad fa-envelope icon"></i>
-          {% block authentication_email_text %}{% trans "Log in with email" %}{% endblock %}
+        {# If allowed providers is given, disable the email menu item #}
+        <a class="{% if allowed_providers %}disabled{% endif %} item"
+           data-tab="email">
+          <i class="fas fa-envelope icon"></i>
+          {% block authentication_email_text %}{% trans "Email" %}{% endblock %}
         </a>
 
         {% if project_password_url %}
           <a class="item" href="{{ project_password_url }}">
-            <i class="fad fa-lock icon"></i>
-            {% trans "Use a password" %}
+            <i class="fas fa-lock icon"></i>
+            {% block authentication_password_text %}{% trans "Password" %}{% endblock %}
           </a>
         {% endif %}
       </div>
@@ -80,10 +75,16 @@
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
 
-            <a class="ui small text" href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
-            <button class="ui primary right cleared floated button" type="submit">
-              {% trans "Log in" %}
-            </button>
+            <div class="ui stackable relaxed text menu">
+              <a class="item" href="{% url 'account_reset_password' %}">
+                {% trans "Forgot your password?" %}
+              </a>
+              <div class="right menu">
+                <button class="ui primary button" type="submit">
+                  {% trans "Log in" %}
+                </button>
+              </div>
+            </div>
 
           </form>
         {% endblock authentication_email %}
