--- a/readthedocsext/theme/templates/semantic-ui/errors.html
+++ b/readthedocsext/theme/templates/semantic-ui/errors.html
@@ -2,19 +2,32 @@
 
 {% if form.errors and form.non_field_errors %}
   {% for error in form.non_field_errors %}
-    <div class="ui small {% firstof error.message_class 'error' %} message">
+    <div class="ui small {% firstof error.message_class 'negative' %} message">
       <div class="header">
         {% trans "Error" as default_header %}
         {% firstof error.header default_header %}
       </div>
-      {% if error.messages|length == 1%}
-        {{ error.messages|first|safe }}
+      {% if error.messages %}
+        {% comment %}
+          Some form errors are raised with multiple error messages, using the
+          `nessages` attribute. This can either be a single message or multiple
+          messages.
+        {% endcomment %}
+        {% if error.messages|length == 1%}
+          {{ error.messages|first|safe }}
+        {% else %}
+          <ul class="list">
+            {% for message in error.messages %}
+              <li>{{ message|safe }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
       {% else %}
-        <ul class="list">
-          {% for message in error.messages %}
-            <li>{{ message|safe }}</li>
-          {% endfor %}
-        </ul>
+        {% comment %}
+          Some older form errors don't use attached messages at all, in which
+          case we can treat these as just unsafe strings.
+        {% endcomment %}
+        {{ error|safe }}
       {% endif %}
     </div>
   {% endfor %}
