Fix comment typo
Co-authored-by: Manuel Kaufmann <humitos@gmail.com>

--- a/readthedocsext/theme/templates/semantic-ui/errors.html
+++ b/readthedocsext/theme/templates/semantic-ui/errors.html
@@ -10,7 +10,7 @@
       {% if error.messages %}
         {% comment %}
           Some form errors are raised with multiple error messages, using the
-          `nessages` attribute. This can either be a single message or multiple
+          `messages` attribute. This can either be a single message or multiple
           messages.
         {% endcomment %}
         {% if error.messages|length == 1%}
