Apply suggestions from code review
Co-authored-by: Anthony <aj@ohess.org>

--- a/readthedocsext/theme/templates/includes/elements/promotions/pull-request-previews.html
+++ b/readthedocsext/theme/templates/includes/elements/promotions/pull-request-previews.html
@@ -2,9 +2,8 @@
   <div class="content">
     <a class="header" target="_blank" href="https://docs.readthedocs.io/page/pull-requests.html">Preview changes before deploying!</a>
     <div class="description">
-      Easily catch documentation formatting and display issues with Pull Request Previews.
-      Stop worrying about having an up-to-date local build environment to build the docs locally,
-      and always have a sharable link with production-ready documentation before going live.
+      Automatically build, preview, and share documentation with every pull request
+      and easily catch issues before going live.
     </div>
   </div>
 </div>
