--- a/readthedocsext/theme/templates/includes/elements/promotions/ruby-support.html
+++ b/readthedocsext/theme/templates/includes/elements/promotions/ruby-support.html
@@ -1,9 +1,9 @@
 <div class="ui card">
   <div class="content">
-    <a class="header" target="_blank" href="https://about.readthedocs.com/blog/2024/03/read-the-docs-loves-ruby/">Read the Docs ❤️ Ruby</a>
+    <a class="header" target="_blank" href="https://about.readthedocs.com/blog/2024/03/read-the-docs-loves-ruby/">{% trans "New: support for Ruby" %}</a>
     <div class="description">
-      We are happy to announce support for Ruby is now available as an option as pre-defined building tools (<code>build.tools</code>).
-      Ruby is now officially supported to build project documentation on Read the Docs 🎉
+      Does your project use Jekyll, RDoc, or YARD?
+      Ruby is now officially supported on Read the Docs as a pre-defined build tool option!
     </div>
   </div>
 </div>
